--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 /* Ajustement global pour le body */
 body {
   font-family: sans-serif;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 
 /* Animation des boutons */
