feat: fix config for sear books in components heroParalax

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@ html, body {
 /* Ajustement global pour le body */
 body {
   font-family: sans-serif;
-  background-color: #fbf7f7;
+  background-color: #141414;
 }
 
 /* Animation des boutons */
